Retrofit list initalization so that CI is happy